# hls-downloader

./: Cargo.toml  README.md
.github/workflows/: rust_ci.yml
src/: main.rs
src/downloader/: ffmpeg_embed.rs  hls_parser.rs  mod.rs  segment_io.rs  util.rs
