[package]
name = "hls_downloader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hls-downloader"
path = "src/main.rs"

[dependencies]
eframe = "0.26"
egui = "0.26"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
futures = "0.3"
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
block-padding = "0.3"
tempfile = "3.23"
rfd = "0.16"
opener = "0.8"
dirs = "6.0.0"
sha2 = "0.10.9"
zstd = "0.13.3"
